setting up AWS S3

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-REACT_APP_BASE_URL=http://localhost:5000
+FLASK_APP=app
+FLASK_ENV=development
+SECRET_KEY=
+DATABASE_URL=
+S3_BUCKET=
+S3_KEY=
+S3_SECRET=
