--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ Mako = "==1.1.3"
 PyJWT = "==1.7.1"
 psycopg2-binary = "*"
 faker = "*"
+boto3 = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
