--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@
 
 -i https://pypi.org/simple
 alembic==1.4.3
+boto3==1.17.102
+botocore==1.20.102; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 click==7.1.2
 dnspython==2.1.0; python_version >= '3.6'
-email-validator==1.1.2
-faker==8.5.1
+email-validator==1.1.3
+faker==8.9.0
 flask-cors==3.0.8
 flask-jwt-extended==3.24.1
 flask-login==0.5.0
@@ -22,15 +24,18 @@ gunicorn==20.0.4
 idna==3.2; python_version >= '3.5'
 itsdangerous==1.1.0
 jinja2==2.11.2
+jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 mako==1.1.3
 markupsafe==1.1.1
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.1
 pyjwt==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+s3transfer==0.4.2
 six==1.15.0
 sqlalchemy==1.3.19
 text-unidecode==1.3
+urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==1.0.1
 wtforms==2.3.3
